force-app/main/default/objects/WasteAdministrationTaxBreaks__c/WasteAdministrationTaxBreaks__c.object-meta.xml
<CustomObject>
    <label>Amministrazione Testo Agevolazione</label>
    <nameField>
        <displayFormat>TB-{000000}</displayFormat>
        <label>TaxBreaks</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Amministrazione Testo Agevolazioni</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>