force-app/main/default/objects/WasteAdministrationTaxBreaks__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ProdottoOpzione</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Il prodotto opzione non esiste.</errorMessage>
        <filterItems>
            <field>Product2.Family</field>
            <operation>equals</operation>
            <value>Opzioni Tari</value>
        </filterItems>
        <filterItems>
            <field>Product2.Service__c</field>
            <operation>equals</operation>
            <value>Ambiente</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Amministrazione Testo Agevolazioni</relationshipLabel>
    <relationshipName>Amministrazione_Testo_Agevolazioni</relationshipName>
    <type>Lookup</type>
</CustomField>