force-app/main/default/objects/WasteAdministrationTaxBreaks__c/fields/TextRemove__c.field-meta.xml
<CustomField>
    <fullName>TextRemove__c</fullName>
    <label>Testo Rimozione</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>