force-app/main/default/objects/WasteAdministrationTaxBreaks__c/fields/TextRequest__c.field-meta.xml
<CustomField>
    <fullName>TextRequest__c</fullName>
    <label>Testo Richiesta</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>